<resources>
    <string name="app_name">eReuse</string>
    <string name="server_label">Choose a server to log in:</string>
    <string name="username_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">Login</string>
    <string-array name="login_servers">
        <item>http://192.168.1.102:5000/</item>
        <item>https://api.devicetag.io/</item>
        <item>https://api-us.devicetag.io/</item>
        <item>https://api-beta.devicetag.io/</item>
        <item>http://devicehub.ereuse.net/</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back_to_login_message">Are you sure you want to leave the current workbench?</string>
    <string name="no_login_workbench_button">Workbench</string>
    <string name="no_login_wokbench">Or you can also use the App to complete your workbench without user and password:
    </string>
    <string name="choose_label">Choose an action:</string>
    <string name="new_event_button">Device Event</string>
    <string name="receive_button">Receive</string>
    <string name="recycle_button">Recycle</string>
    <string name="locate_button">Locate</string>
    <string name="events_button">Events list</string>
    <string name="place_button">New place</string>
    <string name="snapshot_button">New snapshot</string>
    <string name="snapshot_remove_component_button">Remove component</string>
    <string name="form_title_label">Label:</string>
    <string name="form_devices_label">Devices:</string>
    <string name="form_add_device_button">Add device</string>
    <string name="form_comments_label">Comments:</string>
    <string name="form_terms_and_conditions_label">Accept terms and conditions</string>
    <string name="form_send_button">Send</string>
    <string name="form_send_button_disabled">Waiting for a more accurate location...</string>
    <string name="form_device_name">Device name</string>
    <string name="form_device_manufacturer">Device manufacturer</string>
    <string name="form_device_description">Device description</string>
    <string name="form_device_remove_button">X</string>
    <string name="form_receiver_email_label">Receiver\'s email:</string>
    <string name="form_receiver_name_label">Receiver\'s name:</string>
    <string name="form_map_label">Location:</string>
    <string name="form_message_device_already_scanned">This device is already included in the scanned device list!
    </string>
    <string name="form_validation_error_acceptconditions">To perform this action, you must accept the terms and
        conditions
    </string>
    <string name="form_validation_error_emptydevices">Please, remember to scan at least one device.</string>
    <string name="getting_device_location">"Getting Device Location..."</string>
    <string name="unable_to_get_location">"Device settings are not allowing to get your current location"</string>
    <string name="gps_not_enabled">Please check you enabled Location Settings and airplane mode is off.</string>
    <string name="agree">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_device_list_adapter">DeviceListAdapter</string>
    <string name="locate_success">Devices located successfully</string>
    <string name="receive_success">Devices received successfully</string>
    <string name="recycle_success">Devices recycled successfully</string>
    <string name="place_success">New Place created successfully</string>
    <string name="snapshot_success">New Snapshot created successfully</string>
    <string name="snapshot_remove_component_success">Component removed successfully</string>
    <string name="snapshot_remove_component_error">Error Removing component from device</string>
    <string name="waiting">Connecting...</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_place_map">PlaceMapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="place_map_name_label">Place Name:</string>
    <string name="place_map_button_label">Create Place</string>
    <string name="place_map_button_help_label">Map Help</string>
    <string name="place_map_dialog_help_create_title">How can I create a new Place?</string>
    <string name="place_map_dialog_help_create_body">Long-press the map to define a point.
        A place area must be defined at least by 3 points.
    </string>
    <string name="place_map_dialog_help_remove_title">Did you mark a wrong place?</string>
    <string name="place_map_dialog_help_remove_body">Touch one of the created points to remove it.</string>
    <string name="place_map_validation_error_placename">Please, remember to set a name for the new place</string>
    <string name="place_map_validation_error_placedefinition">A new place must be defined at least by 3 locations.
        Please check map help for further instructions
    </string>
    <string name="snapshot_dialog_help_multiple_snapshots_in_row">After a successful snapshot, some fields will mantain
        its value in order to scan multiple similar devices (sharing some fields) in an easy and fast way.
    </string>
    <string name="event_devices_size">Devices</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="event_byUser_label">By user:</string>
    <string name="event_type_label">Type:</string>
    <string name="event_devicesSize_label">Number of devices:</string>
    <string name="event_incidence_label">Incidence:</string>
    <string name="event_secured_label">Secured:</string>
    <string name="event_created_label">Created:</string>
    <string name="event_updated_label">Updated:</string>
    <string name="title_activity_snapshot">SnapshotActivity</string>
    <string name="title_activity_snapshot_choose">SnapshotChooseActivity</string>
    <string name="title_activity_remove_component_snapshot">RemoveComponentActivity</string>
    <string name="title_activity_workbench_snapshot">WorkbenchSnapshotActivity</string>
    <string name="title_activity_javascript_scan">JavascriptScanActivity</string>
    <string name="android_snapshot_button">Snapshot this Android</string>
    <string name="device_snapshot_button">Snapshot a device</string>
    <string name="snapshot_choose_device_type_label">Choose a device type:</string>
    <string name="snapshot_choose_component_type_label">Choose the component type to be removed:</string>
    <string name="new_device_snapshot_head_label">Snapshot a new device</string>
    <string name="new_self_snapshot_head_label">Snapshot this Android device</string>
    <string name="snapshot_serial_number_label">Serial Number</string>
    <string name="snapshot_model_label">Model</string>
    <string name="snapshot_manufacturer_label">Manufacturer</string>
    <string name="snapshot_license_label">License Key</string>
    <string name="snapshot_system_label">System ID</string>
    <string name="snapshot_system_description">The ID printed on the label.</string>
    <string name="snapshot_giver_label">Giver ID</string>
    <string name="snapshot_giver_description">An ID from the giver.</string>
    <string name="snapshot_refurbisher_label">Refurbisher ID</string>
    <string name="snapshot_send_button">Submit</string>
    <string name="snapshot_parent_section_label">Parent Device:</string>
    <string name="snapshot_parent_system_label">System ID</string>
    <string name="snapshot_component_section_label">Component to remove:</string>
    <string name="snapshot_grade_label">Grade options:</string>
    <string name="snapshot_grade_appearance_label">Appearance</string>
    <string name="snapshot_grade_functionality_label">Functionality</string>
    <string name="snapshot_grade_bios_label">Bios</string>
    <string name="snapshot_grade_labels_label">Labels</string>
    <string name="snapshot_grade_appearance_help">Grades the imperfections that aesthetically affect the device, but not
        its usage
    </string>
    <string name="snapshot_grade_labels_help">Sets if there are labels stucked that should be removed</string>
    <string name="snapshot_grade_functionality_help">Grades the defects of a device that affect its usage.</string>
    <string name="snapshot_grade_bios_help">How difficult has been to set the bios to boot from network</string>
    <string name="snapshot_select_text">Touch to select a value</string>
    <string-array name="snapshot_grade_appearance_array">
        <item>0. The device is new</item>
        <item>A. Is like new (without visual damage)</item>
        <item>B. Is in really good condition (small visual damage in difficult places to spot)</item>
        <item>C. Is in good condition (small visual damage in parts that are easy to spot, not on screens)</item>
        <item>D. Is acceptable (visual damage in visible parts, not on screens)</item>
        <item>E. Is unacceptable (considerable visual damage that can affect usage)</item>
    </string-array>
    <string-array name="snapshot_grade_appearance_array_values">
        <item>0</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="snapshot_grade_functionality_array">
        <item>A. Everything works perfectly (buttons, and in case of screens there are no scratches)</item>
        <item>B. There is a button difficult to press or a small scratch in an edge of a screen</item>
        <item>C. A non-important button (or similar) doesn\'t work; screen has multiple scratches in edges</item>
        <item>D. Multiple buttons don\'t work; screen has visual damage resulting in uncomfortable usage</item>
    </string-array>
    <string-array name="snapshot_grade_functionality_array_values">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="snapshot_grade_bios_array">
        <item>A. If by pressing a key you could access a boot menu with the network boot</item>
        <item>B. You had to get into the BIOS, and in less than 5 steps you could set the network boot</item>
        <item>C. Like B, but with more than 5 steps</item>
        <item>D. Like B or C, but you had to unlock the BIOS (i.e. by removing the battery)</item>
        <item>E. The device could not be booted through the network.</item>
    </string-array>
    <string-array name="snapshot_grade_bios_array_values">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string name="search_list_hint">Search here</string>
    <string name="toast_qr_cancel">Cancelled QR scan</string>
    <string name="toast_qr_scanned">Scanned:</string>
    <string name="toast_barcode_cancel">Cancelled barcode scan</string>
    <string name="toast_barcode_scanned">Barcode Scanned:</string>
    <string name="toast_reload_snapshot_data">Snapshot information fulfilled from the latest successful snapshot
    </string>
    <string name="dialog_ack">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset_default">Reset</string>
    <string name="dialog_leave">Exit App</string>
    <string name="dialog_validation_error_title">Missing required information!</string>
    <string name="dialog_validation_internet_disabled_title">Disabled internet connection</string>
    <string name="dialog_validation_internet_disabled_message">Please enable internet connection to enable communication
        to eReuse servers
    </string>
    <string name="dialog_validation_location_disabled_title">Disabled location</string>
</resources>